<resources>
    <string name="ERROR_EMPTY">Cannot be empty</string>
    <string name="ERROR_FORMAT">Invalid email</string>
    <string name="ERROR_LONG_16">Too long (max 16)</string>
    <string name="ERROR_LONG_20">Too long (max 20)</string>
    <string name="ERROR_LONG_24">Too long (max 24)</string>
    <string name="ERROR_LONG_36">Too long (max 36)</string>
    <string name="ERROR_LONG_255">Too long (max 255)</string>
    <string name="ERROR_LONG_400">Too long (max 400)</string>
    <string name="ERROR_LONG_5">Too long (max 5)</string>
    <string name="ERROR_LONG_8">Too long (max 8)</string>
    <string name="ERROR_LONG_9">Too long (max 9)</string>
    <string name="ERROR_SHORT_0">Too short (min 0)</string>
    <string name="ERROR_SHORT_15">Too short (min 15)</string>
    <string name="ERROR_SHORT_3">Too short (min 3)</string>
    <string name="ERROR_SHORT_4">Too short (min 4)</string>
    <string name="ERROR_SHORT_5">Too short (min 5)</string>
    <string name="ERROR_SHORT_6">Too short (min 6)</string>
    <string name="ERROR_SHORT_9">Too short (min 9)</string>
    <string name="aboutApp">App</string>
    <string name="aboutAuthor">Author</string>
    <string name="aboutOther">Other</string>
    <string name="aboutSocial">Social</string>
    <string name="adapterCommunity_txtFlatsTitle">Flats:</string>
    <string name="adapterUserAdmin">Administrator</string>
    <string name="adapterUserNeighbour">Neighbour</string>
    <string name="adapterUserPresident">President</string>
    <string name="adapterUsers_txtCategoryTitle">Category:</string>
    <string name="adapterUsers_txtEmailTitle">Email:</string>
    <string name="adapterUsers_txtFlatTitle">Flat:</string>
    <string name="adapterUsers_txtNameTitle">Name:</string>
    <string name="adapterUsers_txtPhoneTitle">Phone:</string>
    <string name="addedError">This user can not be signed in</string>
    <string name="apache_button">Apache license</string>
    <string name="apache_title">Apache License V2</string>
    <string name="app_licenses_sub">Click to see the Licenses of the third party libraries included in Netbour</string>
    <string name="app_licenses_title">Third party licenses</string>
    <string name="app_name">Netbour</string>
    <string name="app_repository_sub">/JMedinilla/Netbour</string>
    <string name="app_repository_title">Netbour</string>
    <string name="app_version_sub">1.0</string>
    <string name="app_version_title">Version</string>
    <string name="author_email_sub">Click to send an email</string>
    <string name="author_email_subject">Tell me something</string>
    <string name="author_email_title">javimedinilla@gmail.com</string>
    <string name="author_name">Javier J. Medinilla</string>
    <string name="author_web_sub">https://jvmedinilla.ncatz.com/</string>
    <string name="author_web_title">JVMedinilla</string>
    <string name="category_administrator">Administrator</string>
    <string name="category_neighbour">Neighbour</string>
    <string name="category_president">President</string>
    <string name="changed_code">Code changed to:</string>
    <string name="community_deleted">Community deleted!</string>
    <string name="confirm_category">Category:</string>
    <string name="confirm_data">Confirm changes:</string>
    <string name="confirm_date">Date:</string>
    <string name="confirm_description">Description:</string>
    <string name="confirm_door">Door:</string>
    <string name="confirm_flats">Flats:</string>
    <string name="confirm_floor">Floor:</string>
    <string name="confirm_link">Link:</string>
    <string name="confirm_municipality">Municipality:</string>
    <string name="confirm_name">Name:</string>
    <string name="confirm_number">Number:</string>
    <string name="confirm_phone">Phone:</string>
    <string name="confirm_postal">Postal:</string>
    <string name="confirm_province">Province:</string>
    <string name="confirm_street">Street:</string>
    <string name="confirm_title">Title:</string>
    <string name="conversion_error">Image conversion error</string>
    <string name="default_community_code">You have to change the current community code</string>
    <string name="deletedUser">This user was deleted, contact the admin for more information</string>
    <string name="dialog_message_close">Do you want to close the current session?</string>
    <string name="dialog_message_delete">Do yo want to delete</string>
    <string name="dialog_message_delete_two">\?</string>
    <string name="dialog_message_email">If you do not have any email address, you can use a fake one, but you will not be able to restore the password</string>
    <string name="dialog_title_close">Are you sure?</string>
    <string name="dialog_title_delete">Are you sure?</string>
    <string name="dialog_title_edit">Are you sure?</string>
    <string name="dialog_title_email">Fake email</string>
    <string name="document_deleted">Document deleted!</string>
    <string name="edit_photo">The photo can not be edited</string>
    <string name="email_report">Email report</string>
    <string name="entry_deleted">Entry deleted!</string>
    <string name="fragFormCommunityCode">Code</string>
    <string name="fragFormCommunityFlats">Flats</string>
    <string name="fragFormCommunityMunicipality">Municipality</string>
    <string name="fragFormCommunityNumber">Number</string>
    <string name="fragFormCommunityPostal">Postal</string>
    <string name="fragFormCommunityProvince">Province</string>
    <string name="fragFormCommunityStreet">Street</string>
    <string name="fragFormDocumentDescription">Description</string>
    <string name="fragFormDocumentLink">Link</string>
    <string name="fragFormDocumentTitle">Title</string>
    <string name="fragFormEntryCategoryFirst">Main board</string>
    <string name="fragFormEntryCategorySecond">Community board</string>
    <string name="fragFormEntryDescription">Description</string>
    <string name="fragFormEntryTitle">Title</string>
    <string name="fragFormIncidenceDescription">Description</string>
    <string name="fragFormIncidenceTitle">Title</string>
    <string name="fragFormLogin">Login</string>
    <string name="fragFormLoginRegister">No account yet? Create one</string>
    <string name="fragFormLoginWelcome">Welcome to Netbour!</string>
    <string name="fragFormMeetingDate">Date</string>
    <string name="fragFormMeetingDescription">Description</string>
    <string name="fragFormRegister">Register</string>
    <string name="fragFormSave">Save</string>
    <string name="fragFormUserCategoryFirst">Neighbour</string>
    <string name="fragFormUserCategorySecond">President</string>
    <string name="fragFormUserCode">Community code</string>
    <string name="fragFormUserDoor">Door</string>
    <string name="fragFormUserEmail">Email</string>
    <string name="fragFormUserFloor">Floor</string>
    <string name="fragFormUserName">Name</string>
    <string name="fragFormUserPhone">Phone</string>
    <string name="fragFormUserPin">Password</string>
    <string name="groupClose_Close">Close sesion</string>
    <string name="groupOptions_Board">Board</string>
    <string name="groupOptions_ComBoard">Community Board</string>
    <string name="groupOptions_Communities">Communities</string>
    <string name="groupOptions_Documents">Documents</string>
    <string name="groupOptions_Incidences">Incidents</string>
    <string name="groupOptions_Meetings">Meetings</string>
    <string name="groupOptions_Profile">Profile</string>
    <string name="groupOptions_Users">Users</string>
    <string name="groupOthers_About">About</string>
    <string name="groupOthers_Information">Information</string>
    <string name="groupOthers_Settings">Settings</string>
    <string name="image_confirm_title">Send image?</string>
    <string name="image_pick">Select an image from the gallery</string>
    <string name="incidence_deleted">Incidence deleted!</string>
    <string name="invalidUser">Invalid, or already in use email</string>
    <string name="loginFieldEmpty">Email or password is empty!</string>
    <string name="meeting_deleted">Meeting deleted!</string>
    <string name="mit_button">MIT license</string>
    <string name="mit_title">MIT</string>
    <string name="no_code">There is no community code selected</string>
    <string name="no_edit_changes">No changes were made</string>
    <string name="no_permission">You have no permissions to do that</string>
    <string name="nothing_to_show">There is nothing to show</string>
    <string name="other_bug_sub">Click to send an email</string>
    <string name="other_bug_subject">Bug report</string>
    <string name="other_bug_title">Report a bug</string>
    <string name="photo_upload">You have to upload a photo</string>
    <string name="pressBack">Press BACK again to exit</string>
    <string name="select_code">Select a community</string>
    <string name="sendEmailTitle">Send email</string>
    <string name="separator">-</string>
    <string name="snack_undo">Undo</string>
    <string name="social_github_sub">https://github.com/JMedinilla</string>
    <string name="social_github_title">JMedinilla</string>
    <string name="social_linkedin_sub">Click to see the profile</string>
    <string name="social_linkedin_title">Javier Medinilla Agüera</string>
    <string name="social_stack_sub">Click to see the profile</string>
    <string name="social_stack_title">JMedinilla</string>
    <string name="social_twitter_sub">https://twitter.com/JMedinillaDev</string>
    <string name="social_twitter_title">\@JMedinillaDev</string>
    <string name="sort_author">Sort by Author</string>
    <string name="sort_category">Sort by Category</string>
    <string name="sort_chronologically">Sort chronologically</string>
    <string name="sort_date">Sort by Date</string>
    <string name="sort_flats">Sort by Flats</string>
    <string name="sort_menu">Sort by</string>
    <string name="sort_name">Sort by Name</string>
    <string name="sort_phone">Sort by Phone</string>
    <string name="sort_postal">Sort by Postal</string>
    <string name="sort_title">Sort by Title</string>
    <string name="string_reinsert">Element inserted again on the database</string>
    <string name="swipeMenuDelete">Delete</string>
    <string name="swipeMenuEdit">Edit</string>
    <string name="swipeMenuReport">Report</string>
    <string name="updated_fields">All fields updated</string>
    <string name="updated_image">Image updated</string>
    <string name="uri_to_bitmap">Image could not be loaded</string>
    <string name="user_deleted">User deleted!</string>
    <string name="user_response_failure">User could not be retrieved</string>
    <string name="wrongUser">Authentication failed</string>
    <string name="no_admins_community">There are no administrators for this community</string>
    <string name="report_community">No admins to inform</string>
    <string name="report_document">Report document</string>
    <string name="report_entry">Report entry</string>
    <string name="report_incidence">Report incidence</string>
    <string name="report_meeting">Report meeting</string>
    <string name="report_user">Report user</string>
    <string name="no_email_admin">No admins to inform</string>
    <string name="tlf_abrv">Tel.</string>
    <string name="upload_fail">Image could not be uploaded</string>
    <string name="upload_success">Image uploaded</string>
    <string name="gallery_grant_title">Grant permission to read the storage</string>
    <string name="gallery_grant_message">This feature needs to read the external storage of the phone to select an image, please grant it</string>
    <string name="gallery_denied_title">Permission denied</string>
    <string name="gallery_denied_message">The storage permission is denied, that is why this feature is disabled. To change that, go to the phone settings, applications section and choose Netbour to grant the permission there</string>
    <string name="no_profile_title">Error</string>
</resources>